--- a/views/strategy/edit.html
+++ b/views/strategy/edit.html
@@ -73,6 +73,11 @@
             <input class='form-control' type='text' placeholder='需要POST的数据(get方法不用填写)' id='data'></input>
           </div>
 
+            <div class='form-group'>
+                <label for='TargetNeedToMonitor'>IDC</label>
+                <input class='form-control' type='text' placeholder='idc机房,如: internal.ayg.gz (即使用哪个机房的agent进行url访问,不清楚询问管理员)' id='idc'></input>
+            </div>
+
           <div class='form-group'>
           <label for='TargetNeedToMonitor'>IP</label>
             <input class='form-control' type='text' placeholder='指定域名对应的ip' id='ip'></input>
@@ -122,8 +127,8 @@ $(function() {
             }
         },
         formatResult: function(obj) {return obj.name},
-        formatSelection: function(obj) {return obj.name},
-    }).select2('val', []);;
+        formatSelection: function(obj) {return obj.name}
+    }).select2('val', []);
 });
 
 $('#submit').click(function(){
