--- a/views/strategy/create.html
+++ b/views/strategy/create.html
@@ -28,6 +28,10 @@
               <label for='TargetNeedToMonitor'>Timeout (毫秒)</label>
               <input class='form-control' type='timeout' placeholder='单位：毫秒，默认 3000ms' id='timeout'></input>
           </div>
+            <div class='form-group'>
+                <label for='TargetNeedToMonitor'>IDC(选填)</label>
+                <input class='form-control' type='text' placeholder='idc机房，如 internal.ayg.gz (即使用哪个机房的agent进行url访问,不清楚询问管理员)' id='idc'></input>
+            </div>
 
            <div class='form-group'>
             <label for='TargetNeedToMonitor'>备注(选填)</label>
@@ -69,10 +73,7 @@
             <input class='form-control' type='text' placeholder='监控要登录状态访问的url时填写' id='data'></input>
           </div>
 
-            <div class='form-group'>
-                <label for='TargetNeedToMonitor'>IDC</label>
-                <input class='form-control' type='text' placeholder='idc机房，如 internal.ayg.gz (即使用哪个机房的agent进行url访问,不清楚询问管理员)' id='idc'></input>
-            </div>
+
           <div class='form-group'>
           <label for='TargetNeedToMonitor'>IP</label>
             <input class='form-control' type='text' placeholder='指定域名对应的ip,多个用逗号隔开' id='ip'></input>
