--- a/views/strategy/edit.html
+++ b/views/strategy/edit.html
@@ -32,10 +32,7 @@
               <label for='TargetNeedToMonitor'>Timeout (毫秒)</label>
               <input class='form-control' type='timeout' placeholder='单位：毫秒' id='timeout'></input>
           </div>
-        <div class='form-group'>
-            <label for='TargetNeedToMonitor'>IDC (选填)</label>
-            <input class='form-control' type='text' placeholder='idc机房，如 internal.ayg.gz (即使用哪个机房的agent进行url访问,不清楚询问管理员)' id='idc'></input>
-        </div>
+
            <div class='form-group'>
             <label for='TargetNeedToMonitor'>备注(选填)</label>
             <div class='controls'>
@@ -75,6 +72,12 @@
           <label for='TargetNeedToMonitor'>Cookie</label>
             <input class='form-control' type='text' placeholder='需要POST的数据(get方法不用填写)' id='data'></input>
           </div>
+
+            <div class='form-group'>
+                <label for='TargetNeedToMonitor'>IDC</label>
+                <input class='form-control' type='text' placeholder='idc机房,如: internal.ayg.gz (即使用哪个机房的agent进行url访问,不清楚询问管理员)' id='idc'></input>
+            </div>
+
           <div class='form-group'>
           <label for='TargetNeedToMonitor'>IP</label>
             <input class='form-control' type='text' placeholder='指定域名对应的ip' id='ip'></input>
